# django-blogging

./: .gitignore  .replit  README.md  main.py  plans.txt  pyproject.toml  replit.nix  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0006_alter_comment_body.py  0007_remove_comment_email.py
css/: base.css
home/: views.py
home/templates/home/: index.html
static/css/: base.css
templates/: 404.html  base.html  index.html  post_detail.html  sidebar.html
templates/registration/: login.html
webserver/: settings.py  urls.py
webserver/blog/: admin.py  models.py
webserver/home/: urls.py
webserver/home/templates/home/: disclaimer.html  index.html
webserver/mysite/: settings.py
webserver/templates/: post_detail.html
webserver/webserver/: settings.py  urls.py  wsgi.py
