[tool.poetry]
name = "voidapex11's blog"
version = "0.1.0" # probably will never change from the starting value
description = "A blogging framework I made"
authors = ["voidapex11 <supersloth365@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
django = "^5.0.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"